--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Nos travaux</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="css/bootstrap/css/bootstrap.gall.css">
-<link rel="stylesheet" href="gall.css">
+<link href="css/bootstrap/css/bootstrap.styl.css">
+<link rel="stylesheet" href="styl.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
 </head>
 <body> 
@@ -23,12 +23,11 @@
                 <img src="images/1.png"  class="center"width="210" height="240">
                 <img src="images/2.png" class="center" alt="Logo HTML w3"width="210" height="240">
                 <img src="images/3.png"  class="center"alt="Logo HTML w3"width="210" height="240" >
-               
             </div>
                 <div class="img4">
                     <img src="images/4.png" width="210" height="240" >
                     <img src="images/5.png" alt="Logo HTML w3"width="210" height="240">
-                        <img src="images/6.png" alt="Logo HTML w3"width="210" height="240">
+                    <img src="images/6.png" alt="Logo HTML w3"width="210" height="240">
                     </div>
                     <div class="button">
                         <button class="btn btn-success" type="submit" class="float-right img-thumbnail">nous contacter</button>
